# stream-audio

./: .gitignore  AGENTS.md  AI.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  justfile  rustfmt.toml
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: ci.yml
examples/: custom_sink.rs  interactive.rs  multi.rs  multi_sink.rs  multi_source.rs  screencapturekit.rs  simple.rs  simple_record.rs  system_audio.rs
src/: builder.rs  chunk.rs  config.rs  error.rs  event.rs  lib.rs  session.rs
src/format/: convert.rs  mod.rs  resample.rs
src/pipeline/: capture.rs  merger.rs  mod.rs  ring_buffer.rs  router.rs  routing.rs
src/platform/: mod.rs
src/platform/macos/: mod.rs  permissions.rs
src/sink/: channel.rs  file.rs  mod.rs
src/source/: device.rs  mock.rs  mod.rs  source_id.rs
src/source/system_audio/: cpal_loopback.rs  mock.rs  mod.rs  sck_native.rs  screencapturekit.rs  test_support.rs
swift/: Package.swift  build.sh
swift/Sources/SCKAudioCapture/: SCKAudioCapture.swift
swift/Sources/SCKAudioCapture/include/: sck_audio.h
tests/: integration.rs
