[package]
name = "stream-audio"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
description = "Real-time audio capture with multi-sink architecture"
repository = "https://github.com/lotl-co/stream-audio"
documentation = "https://docs.rs/stream-audio"
readme = "README.md"
keywords = ["audio", "capture", "streaming", "cpal", "async"]
categories = ["multimedia::audio", "asynchronous"]

[features]
default = []
system-audio = []

[dependencies]
async-trait = "0.1"
# Using git until loopback support (Core Audio Taps) is released to crates.io
cpal = { git = "https://github.com/RustAudio/cpal.git" }
futures = "0.3"
ringbuf = "0.4"
thiserror = "2"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros", "fs", "time"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints.rust]
# Deny by default, allow override in system-audio module for FFI
unsafe_code = "deny"
missing_docs = "warn"

[lints.clippy]
# Correctness
correctness = { level = "deny", priority = -1 }

# Restriction (opt-in, strict)
clone_on_ref_ptr = "warn"
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"
unwrap_used = "warn"
expect_used = "warn"

# Pedantic (stricter lints)
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"

# Style
needless_pass_by_value = "warn"
redundant_closure_for_method_calls = "warn"

# Complexity
cognitive_complexity = "warn"

# Performance
perf = { level = "warn", priority = -1 }
